--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Derek Lu</title>
-    <meta name="description" content="This is Derek Lu's Homepage">
-    <meta name="author" content="Derek Lu">
+    <title>LING5505-Final-Project-Group3</title>
+    <meta name="description" content="This is concise single page for LING5505-Final-Project-Group-3">
+    <meta name="author" content="Derek, TimmyChu, SuSuYang and wyinChen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/faviconntu.ico"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -29,37 +29,29 @@
   <body>
     <div class="container">
       <div class="intro">
-        <h1>Hello!</h1>
+        <h1>Project Reports</h1>
         <p style="font-weight:500; font-size:2.2em">
-          I am Derek.
         </p>
 
         <p data-aos="fade-right">
-          LINKS
         </p>
 
       </div>
 
       <div class="d-flex justify-content-center" data-aos="zoom-out">
           <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
-          <a href="https://www.surveycake.com/s/w73VR" target="_blank" class="d-block btn btn-outline-light">表單  <i class="fas fa-heart"></i></a></div>
+          <a href="https://www.surveycake.com/s/w73VR" target="_blank" class="d-block btn btn-outline-light">Project by R  <i class="fas fa-r-project"></i></a></div>
           <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
-          <a href="https://www.youtube.com/channel/UCw7yY5oUl0mTFWSXUG_2CLg" target="_blank" class="d-block btn btn-outline-light">Youtube Channel  <i class="fab fa-youtube"></i></a></div>
-          <div class="btn-group mt-2 mb-4" role="group" arqia-label="actionButtons">
-          <a href="https://www.behance.net/derekdylu00ae" target="_blank" class="d-block btn btn-outline-light">Bēhance Profile  <i class="fab fa-artstation"></i></a></div>
+          <a href="https://derekdylu.github.io/LING5505-Final-Project-Group3/sense.html" target="_blank" class="d-block btn btn-outline-light">Project by Python  <i class="fab fa-python"></i></a></div>
       </div>
 
         <p data-aos="fade-right">
-          Born in Taoyuan, 1999, currently live in both Hsinchu and Taipei, Taiwan
         </p>
         <p data-aos="fade-right">
-          B.B.A. (Information Management) at National Taiwan University
         </p>
         <p data-aos="fade-right">
-          HPAIR, NTU student council
         </p>
         <p data-aos="fade-right">
-          Familiar with videography, graphic designing and computer programming
         </p>
 
         <p data-aos="fade-right">
@@ -68,24 +60,16 @@
       
       <div class="d-flex justify-content-center" data-aos="fade-up">
           <div class="social-icons spinned">
-            <a class="item facebook" href="https://facebook.com/derekdylu" target="_blank"><i class="fab fa-facebook"></i></a>
-            <a class="item instagram" href="https://instagram.com/derekdylu" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a class="item github" href="https://github.com/derekdylu" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="item youtube" href="https://www.youtube.com/user/derekdylu" target="_blank"><i class="fab fa-youtube"></i></a>
-            <a class="item linkedin" href="https://www.linkedin.com/in/derek-l-044ba895/" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a class="item" href="mailto:derekdylu@gmail.com"><i class="fa fa-envelope"></i></a>
+            <a class="item github" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fa fa-television"></i></a>
+            <a class="item report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fa fa-newspaper-o"></i></a>
           </div>
       </div>
 
     </div>
-
-   <footer class="footer">
-     &copy; <script>document.write(new Date().getFullYear());</script> Derek D.Y. Lu. All rights reserved.<br>
-     <span style="font-size:0.8em">Source code of this site is held on <a href="https://github.com/derekdylu/derekdylu.github.io" target="_blank">GitHub</a> <i class="fas fa-heart" style="color: red"></i> by <a href="https://github.com/derekdylu" target="_blank">@derekdylu</a> and <a href="https://github.com/icheft" target="_blank">@icheft</a>.</span>
-   </footer>
   
   
-
+  
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script>
     AOS.init();
