--- a/index.html
+++ b/index.html
@@ -29,23 +29,26 @@
   <body>
     <div class="container">
       <div class="intro">
-        <h1>Project Reports</h1>
+        <h1>Hi~</h1>
         <p style="font-weight:500; font-size:2.2em">
+          LING5505-Final-Project-Group3
         </p>
 
         <p data-aos="fade-right">
+          Project reports,
         </p>
 
       </div>
 
       <div class="d-flex justify-content-center" data-aos="zoom-out">
           <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
-          <a href="https://www.surveycake.com/s/w73VR" target="_blank" class="d-block btn btn-outline-light">Project by R  <i class="fas fa-r-project"></i></a></div>
+          <a href="https://www.surveycake.com/s/w73VR" target="_blank" class="d-block btn btn-outline-light">Project by R  <i class="fab fa-r-project"></i></a></div>
           <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
           <a href="https://derekdylu.github.io/LING5505-Final-Project-Group3/sense.html" target="_blank" class="d-block btn btn-outline-light">Project by Python  <i class="fab fa-python"></i></a></div>
       </div>
 
         <p data-aos="fade-right">
+          We are Derek, TimmyChu, SuSuYang and wyinChen
         </p>
         <p data-aos="fade-right">
         </p>
@@ -55,14 +58,14 @@
         </p>
 
         <p data-aos="fade-right">
-          <br>
+          Some other stuff are shown below,
         </p>
       
       <div class="d-flex justify-content-center" data-aos="fade-up">
           <div class="social-icons spinned">
             <a class="item github" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fa fa-television"></i></a>
-            <a class="item report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fa fa-newspaper-o"></i></a>
+            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fas fa-tv"></i></a>
+            <a class="item report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fas fa-copy"></i></a>
           </div>
       </div>
 
