--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
       <div class="d-flex justify-content-center" data-aos="fade-up">
           <div class="social-icons spinned">
             <a class="item github" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fas fa-tv"></i></a>
-            <a class="item report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fas fa-copy"></i></a>
+            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="far fa-file-powerpoint"></i></a>
+            <a class="item written report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fas fa-copy"></i></a>
           </div>
       </div>
 
