--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>LING5505-Final-Project-Group3</title>
     <meta name="description" content="This is concise single page for LING5505-Final-Project-Group-3">
-    <meta name="author" content="Derek, TimmyChu, SuSuYang and wyinChen">
+    <meta name="author" content="Derek, Timmy, SuSuYang and wyinChen">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/png" href="assets/images/faviconntu.ico"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -35,37 +35,40 @@
         </p>
 
         <p data-aos="fade-right">
-          Project reports,
+          We are Derek, Timmy, SuSuYang and wyinChen
         </p>
 
       </div>
 
       <div class="d-flex justify-content-center" data-aos="zoom-out">
           <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
-          <a href="https://www.surveycake.com/s/w73VR" target="_blank" class="d-block btn btn-outline-light">Project by R  <i class="fab fa-r-project"></i></a></div>
+          <a href="https://derekdylu.github.io/LING5505-Final-Project-Group3/rmd.html" target="_blank" class="d-block btn btn-outline-light">Project by R  <i class="fab fa-r-project"></i></a></div>
           <div class="btn-group mt-2 mb-4" role="group" aria-label="actionButtons">
           <a href="https://derekdylu.github.io/LING5505-Final-Project-Group3/sense.html" target="_blank" class="d-block btn btn-outline-light">Project by Python  <i class="fab fa-python"></i></a></div>
       </div>
 
         <p data-aos="fade-right">
-          We are Derek, TimmyChu, SuSuYang and wyinChen
+          Since we did our project by R and Python, there're two different pages to demonstrate our results, please click links above.
         </p>
         <p data-aos="fade-right">
+          Basically we want to find insights into selected essays of Taiwan's GSAT and AST.
         </p>
         <p data-aos="fade-right">
+          If you want to run the program by yourself, please follow the Readme file in the github repository below.
         </p>
         <p data-aos="fade-right">
+          This is a concise single page for course LING-5505's Final Project at National Taiwan University.
         </p>
 
         <p data-aos="fade-right">
-          Some other stuff are shown below,
+          Github repository, slide and written report are shown below, please click icons to visit.
         </p>
       
       <div class="d-flex justify-content-center" data-aos="fade-up">
           <div class="social-icons spinned">
             <a class="item github" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fab fa-github"></i></a>
             <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="far fa-file-powerpoint"></i></a>
-            <a class="item written report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fas fa-copy"></i></a>
+            <a class="item written report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="far fa-file-word"></i></a>
           </div>
       </div>
 
