--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="d-flex justify-content-center" data-aos="fade-up">
           <div class="social-icons spinned">
             <a class="item github" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="far fa-file-powerpoint"></i></a>
+            <a class="item slide" href="https://github.com/derekdylu/LING5505-Final-Project-Group3/blob/main/report/slides.pdf" target="_blank"><i class="far fa-file-powerpoint"></i></a>
             <a class="item written report" href="https://github.com/derekdylu/LING5505-Final-Project-Group3" target="_blank"><i class="far fa-file-word"></i></a>
           </div>
       </div>
