--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
   
     <footer class="footer">
       &copy; <script>document.write(new Date().getFullYear());</script> by LING5505-Group3<br>
-      <span style="font-size:0.8em">Source code of this site is held on GitHub.</span>
+      <span style="font-size:0.8em">Source code of this site is held on <a href="https://github.com/derekdylu/derekdylu.github.io" target="_blank">GitHub</a>.</span>
     </footer>
   
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
