--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 
         <p data-aos="fade-right">
           Github repository, slide and written report are shown below, please click icons to visit.
+          <img src="./index_files/figure-html/unnamed-chunk-2-1.png" alt="fig1" width="200" height="80">
         </p>
       
       <div class="d-flex justify-content-center" data-aos="fade-up">
