--- a/source/web/index.html
+++ b/source/web/index.html
@@ -320,7 +320,7 @@ div.tocify {
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li>
-  <a href="index.html">
+  <a href="https://derekdylu.github.io/LING5505-Final-Project-Group3/">
     <span class="fas fa-home"></span>
      
     Home
